clusters/apps/rehearsals/ops45/00-idle/01-network.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: ops45-deny-all
  labels:
    app.kubernetes.io/part-of: ops45-restore
    app.kubernetes.io/managed-by: argocd
    app.kubernetes.io/name: ops45-deny-all
  namespace: ops45-restore
  annotations:
    argocd.argoproj.io/sync-wave: '-2'
spec:
  podSelector: {}
  policyTypes:
  - Ingress
  - Egress
  ingress: []
  egress: []
